src/css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
	v2.0 | 20110126
	License: none (public domain)
*/
/* prettier-ignore */
html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
/* prettier-ignore */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}
* {
  box-sizing: border-box;
}
html {
  font-family: Roboto, Helvetica, Arial, sans-serif;
  font-size: 62.5%;
  overflow-y: scroll;
}
body {
  font-size: 1.4rem;
}
button:focus {
  outline: none;
}
a:hover {
  outline: none;
}
h1 {
  font-size: 2.4rem;
}
h2 {
  font-size: 2rem;
}
h3 {
  font-size: 1.7rem;
}
p {
  font-size: 1.5rem;
}
italic {
  font-style: italic;
}
strong {
  font-weight: bold;
}
.App {
  padding: 0% 10% 10%;
  background: #182628;
  min-height: 100vh;
}
.App nav {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  margin-bottom: 20px;
  background: white;
  height: 80px;
}
.App a {
  text-decoration: none;
  font-size: 1.8rem;
  color: #182628;
}
.App a:hover {
  font-weight: bold;
}
.App .active-nav {
  background: #182628;
  color: white;
  padding: 15px 40px;
  border-radius: 10px;
}
.container {
  background: white;
  border-radius: 10px;
  margin: 0 auto;
  padding: 20px;
}
.container .btn {
  height: 40px;
  font-size: 1.8rem;
  border-radius: 5px;
  box-shadow: 2px 3px 5px #272626;
  margin: 5px 0;
  background: #65CCB8;
  border: none;
}
.container .btn:hover {
  cursor: pointer;
  background: #182628;
  color: #f2f2f2;
}
.home-nav {
  visibility: hidden;
}
.home-container {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.home-container h1 {
  font-size: 6rem;
  width: 100%;
  text-align: center;
  margin: 50px 0;
  color: #3B945E;
  font-weight: bold;
  font-family: "Reem Kufi", sans-serif;
  text-shadow: 1px 2px 2px #182628;
}
.home-container h2 {
  text-align: center;
  font-size: 3rem;
  line-height: 50px;
}
.home-btn {
  margin-top: 2%;
  width: 40%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.home-btn .register-btn,
.home-btn .login-btn {
  width: 200px;
  height: 60px;
  font-size: 2.5rem;
  font-weight: bold;
}
.posts-page-container h1 {
  font-size: 6rem;
  width: 100%;
  text-align: center;
  margin: 50px 0;
  color: #3B945E;
  font-weight: bold;
  font-family: "Reem Kufi", sans-serif;
  text-shadow: 1px 2px 2px #182628;
}
.top-section-container {
  width: 100%;
  display: flex;
  justify-content: space-around;
}
.top-section-container input {
  width: 50%;
  text-align: center;
  font-size: 1.7rem;
  background: rgba(184, 255, 249, 0.39);
  border-radius: 5px;
  border: 1px solid #e7e2e2;
  box-shadow: 1px 2px 3px lightgray;
}
.posts-list-container {
  margin: 30px auto 0;
  width: 100%;
  min-height: 100vh;
  height: 3500px;
  overflow-x: hidden;
  overflow-y: scroll;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  align-items: center;
}
.posts-list-container .each-post {
  width: 29%;
  text-align: center;
  background: rgba(245, 216, 137, 0.11);
  border-radius: 10px;
  box-shadow: 1px 2px 3px grey;
  margin: 10px;
  padding: 15px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-evenly;
}
.posts-list-container .each-post h2,
.posts-list-container .each-post h3,
.posts-list-container .each-post img,
.posts-list-container .each-post p,
.posts-list-container .each-post button {
  margin-bottom: 10px;
}
.posts-list-container .each-post h2 {
  font-family: "Reem Kufi", sans-serif;
}
.posts-list-container .each-post img {
  width: 100%;
  height: auto;
  border-radius: 10px;
  box-shadow: 1px 2px 5px #131212;
}
.posts-list-container .each-post img:hover {
  filter: grayscale(90%);
  transform: scale(0.99);
  cursor: pointer;
}
.posts-list-container .each-post .view-story-btn {
  font-size: 1.5rem;
}
.form-container {
  text-align: center;
}
.form-container h1 {
  font-size: 6rem;
  width: 100%;
  text-align: center;
  margin: 50px 0;
  color: #3B945E;
  font-weight: bold;
  font-family: "Reem Kufi", sans-serif;
  text-shadow: 1px 2px 2px #182628;
}
.form-container .form {
  min-height: 50vh;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
}
.form-container input,
.form-container textarea {
  height: 50px;
  width: 40%;
  color: #182628;
  padding-left: 15px;
  font-size: 1.7rem;
  border-radius: 10px;
  border: 1px solid lightgray;
  box-shadow: 2px 3px 5px gray;
  margin-bottom: 20px;
}
.btn-container {
  width: 40%;
  display: flex;
  justify-content: space-between;
  padding-bottom: 3%;
}
.btn-container .btn {
  width: 200px;
}
.home-form {
  background: white;
  border-radius: 10px;
  margin: 0 auto;
  padding-top: 3%;
}
.home-form h2,
.home-form p {
  margin-bottom: 15px;
}
.home-form .form {
  min-height: auto;
}
.submit-btn {
  height: 40px;
  width: 100px;
  font-size: 1.8rem;
  border-radius: 5px;
  box-shadow: 2px 3px 5px #272626;
  margin: 20px 0;
  background: #65CCB8;
  border: none;
}
.submit-btn:hover {
  cursor: pointer;
  background: #182628;
  color: #f2f2f2;
}

